# fit-bi-pa2-asteroids

./: .gitignore  CMakeLists.txt  Doxyfile  Makefile  README.md  prohlaseni.txt  zadani.txt
doc/: _asteroid_8h_source.html  _collidable_object_8h_source.html  _color_8h_source.html  _d_line_8h_source.html  _d_vector2_d_8h_source.html  _flame_8h_source.html  _game_manager_8h_source.html  _game_object_8h_source.html  _graphics_object_8h_source.html  _input_manager_8h_source.html  _physics_object_8h_source.html  _player_8h_source.html  _random_8h_source.html  _render_manager_8h_source.html  _rotation_8h_source.html  _s_d_l_manager_8h_source.html  _settings_8h_source.html  _shot_8h_source.html  _super_manager_8h_source.html  _throw_errors_8h_source.html  _timer_manager_8h_source.html  _u_i___any_text_8h_source.html  _u_i___character_8h_source.html  _u_i___line_8h_source.html  _u_i___player_icon_8h_source.html  _u_i___score_text_8h_source.html  _upgrade_8h_source.html  annotated.html  class_asteroid-members.html  class_asteroid.html  class_asteroid__coll__graph.map  class_asteroid__coll__graph.md5  class_asteroid__inherit__graph.map  class_asteroid__inherit__graph.md5  class_collidable_object-members.html  class_collidable_object.html  class_collidable_object__coll__graph.map  class_collidable_object__coll__graph.md5  class_collidable_object__inherit__graph.map  class_collidable_object__inherit__graph.md5  (+182 more)
doc/search/: all_0.js  all_10.js  all_11.js  all_12.js  all_13.js  all_2.js  all_3.js  all_5.js  all_6.js  all_8.js  all_9.js  all_a.js  all_c.js  all_e.js  all_f.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  enums_0.js  enums_1.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_9.js  functions_a.js  functions_b.js  functions_c.js  functions_d.js  (+17 more)
examples/: asteroids.txt  highscores.txt
src/: main.cpp
src/files/GameObjectTypes/: CollidableObject.cpp  CollidableObject.h  GameObject.cpp  GameObject.h  GraphicsObject.cpp  GraphicsObject.h  PhysicsObject.cpp  PhysicsObject.h
src/files/GameObjects/: Asteroid.cpp  Asteroid.h  Flame.cpp  Flame.h  Player.cpp  Player.h  Shot.cpp  Shot.h  Upgrade.cpp  Upgrade.h
src/files/Managers/: GameManager.cpp  GameManager.h  InputManager.cpp  InputManager.h  RenderManager.cpp  RenderManager.h  SDLManager.cpp  SDLManager.h  SuperManager.cpp  SuperManager.h  (+2 more)
(+22 files in other folders)
